reworked template to include a biblatex bibliography (not really working yet!)

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -132,6 +132,8 @@
     "\n",
     "In this step, specific guidance is provided for selecting hardware and software suitable for machine learning.\n",
     "\n",
+    "This is a test citation <cite data-cite=\"Kasper_Studie_I4.0_2019\">[Kasper_Studie_I4.0_2019]</cite>.\n",
+    "\n",
     "## Hardware\n",
     "\n",
     "When considering hardware requirements, two systems and their use cases must be taken into account: the **training system** and the **application system**.\n",
@@ -8681,11 +8683,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
    "author": "Dipl.-Ing. Bj\\\"orn Kasper",
+   "bib": "literature/notebook.bib",
    "cover_image": "images/Cover_image.pdf",
    "email": "kasper.bjoern@bgetem.de",
    "title": "Getting started with Machine Learning (ML) and Support Vector Classifiers (SVC) - A systematic step-by-step approach"
