added custom build script for compiling Jupyter notebooks with BibLaTeX references and reworked LaTeX template

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -132,7 +132,7 @@
     "\n",
     "In this step, specific guidance is provided for selecting hardware and software suitable for machine learning.\n",
     "\n",
-    "This is a test citation <cite data-cite=\"Kasper_Studie_I4.0_2019\">[Kasper_Studie_I4.0_2019]</cite>.\n",
+    "This is a test citation (<cite data-cite=\"Kasper_Studie_I4.0_2019\">Kasper, 2019</cite>) and another (<cite data-cite=\"parallel-computing\">Barney, 2012</cite>).\n",
     "\n",
     "## Hardware\n",
     "\n",
@@ -8683,7 +8683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
