--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -15,4 +15,15 @@ Abschließend werden die Anwendungsszenarien dahin gehend bewertet, ob in ihnen 
   file        = {:/home/bk/Seafile/BAuA_Files/Projekt_Sicherheitstechnische_Methoden_Industrie_4.0_SMI4.0/09_Studie_I4.0_Use_Cases/2019-02-22_Studie_I4.0_Technologieentwicklung_Use_Cases_Publikation_Gd96.pdf:PDF},
   owner       = {bk},
   timestamp   = {2019-05-11},
+  keywords	  = {book, trusted},
+}
+
+@online{parallel-computing,
+	author       = {Blaise Barney},
+	title        = {Introduction to Parallel Computing},
+	url          = {https://csis.pace.edu/~marchese/SE765/L0/Introduction%20to%20Parallel%20Computing.htm},
+	date        = {2012-06-27},
+	urldate      = {2022-08-29},
+	organization = {Lawrence Livermore National Laboratory},
+	keywords  	 = {URL},
 }
